[dev] rm useless code

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <demo_version>0.1.0-SNAPSHOT</demo_version>
         <!-- common libs -->
         <spring_version>4.0.5.RELEASE</spring_version>
-        <dubbo_version>2.5.3-fengqu</dubbo_version>
+        <dubbo_version>2.5.4-pocrd</dubbo_version>
         <mybatis_version>3.2.7</mybatis_version>
         <mybatis_spring_version>1.2.2</mybatis_spring_version>
         <logback_version>1.1.2</logback_version>
@@ -317,12 +317,6 @@
                 <groupId>com.aliyun.openservices</groupId>
                 <artifactId>ons-client</artifactId>
                 <version>1.1.5</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.taobao.diamond</groupId>
-                <artifactId>diamond-client</artifactId>
-                <version>2.0.5.4-SNAPSHOT</version>
             </dependency>
 
             <dependency>
