--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <parent_version>1.0.0</parent_version>
-        <api-util_version>1.2.3-SNAPSHOT</api-util_version>
+        <api-util_version>2.0.0-SNAPSHOT</api-util_version>
         <!-- dependency versions -->
         <!-- 2nd party libs-->
         <demo_version>0.1.0-SNAPSHOT</demo_version>
@@ -184,6 +184,18 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
+                <version>${spring_version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
                 <version>${spring_version}</version>
                 <exclusions>
                     <exclusion>
