[dev] fix config

--- a/service/src/main/resources/config.properties
+++ b/service/src/main/resources/config.properties
@@ -1,7 +1,7 @@
-net.pocrd.demo.datasource.url=jdbc:mysql://rds-lefang-01.mysql.rds.aliyuncs.com:3306/demo?autoReconnect=true&amp;useUnicode=true&amp;characterset=utf-8
-net.pocrd.demo.datasource.username=root
-net.pocrd.demo.datasource.password=#@#zhongtian2
-net.pocrd.demo.log.home=/root/logs/dubbo-template-service/
+net.pocrd.demo.datasource.url=jdbc:mysql://localhost:3306/demo?autoReconnect=true&amp;useUnicode=true&amp;characterset=utf-8
+net.pocrd.demo.datasource.username=admin
+net.pocrd.demo.datasource.password=admin@123
+net.pocrd.demo.log.home=/home/admin/logs/dubbo-template-service/
 dubbo.export.timeout=3000
-dubbo.registry.url=zookeeper://172.16.187.1:2181
+dubbo.registry.url=zookeeper://localhost:2181
 dubbo.reference.version=LATEST
