--- a/demo-service/pom.xml
+++ b/demo-service/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>service</artifactId>
+    <artifactId>demo-service</artifactId>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
