--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>demo-service</artifactId>
+    <artifactId>service</artifactId>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
@@ -17,11 +17,11 @@
         </dependency>
         <dependency>
             <groupId>net.pocrd</groupId>
-            <artifactId>demo-api</artifactId>
+            <artifactId>api</artifactId>
         </dependency>
         <dependency>
             <groupId>net.pocrd</groupId>
-            <artifactId>demo-dao</artifactId>
+            <artifactId>dao</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
