--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -9,7 +9,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>dao</artifactId>
+    <artifactId>demo-dao</artifactId>
     <packaging>jar</packaging>
     <build>
         <finalName>demo-dao</finalName>
