--- a/pom.xml
+++ b/pom.xml
@@ -70,12 +70,12 @@
         <dependencies>
             <dependency>
                 <groupId>net.pocrd</groupId>
-                <artifactId>api</artifactId>
+                <artifactId>demo-api</artifactId>
                 <version>${demo_version}</version>
             </dependency>
             <dependency>
                 <groupId>net.pocrd</groupId>
-                <artifactId>dao</artifactId>
+                <artifactId>demo-dao</artifactId>
                 <version>${demo_version}</version>
             </dependency>
 
