--- a/mixer/pom.xml
+++ b/mixer/pom.xml
@@ -1,26 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>net.pocrd</groupId>
         <artifactId>demo</artifactId>
         <version>0.1.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
-    <artifactId>demo-api</artifactId>
+    <artifactId>demo-mixer</artifactId>
     <packaging>jar</packaging>
-
     <dependencies>
         <dependency>
             <groupId>net.pocrd</groupId>
             <artifactId>apigw-constraint</artifactId>
         </dependency>
     </dependencies>
-
     <build>
-        <finalName>demo-api</finalName>
+        <finalName>demo-mixer</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
